room.css
@media (orientation: landscape) {
  html {
    -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
  }
}
body{
  background-color:#fafafa;
  color:#3c3c3c;
  text-align:center;
  line-height:1.6;
  font-size:16px;
}
header{
  border-bottom: ridge;
  margin-bottom: 20px;
  font-size:18px;
}
header h2{
  line-height:1;
}
header p {
  margin: 0 auto 15px;
}
header #title-links a {
  display: inline-block;
}
@media all and (max-width: 750px) {
  header h2{
    margin: 25px auto 5px;
  }
}
@media not all and (max-width: 750px) {
  header {
    display: table;
    width: 100%;
    padding-bottom: 5px;
  }
  header h2 {
    margin: 10px auto;
  }
  header #title-links {
    display: table-header-group;
    text-align: right;
  }
}
@media not all and (max-width: 1000px) {
  header h2 {
    margin-top: 0;
  }
}
#messages {
  margin: 0 auto 125px;
  width: 100%;
  max-width: 650px;
  display: inline-block;
  text-align: left;
}
#messages > .message{
  word-wrap: break-word;
}
#messages > .message .timestamp {
  font-size: smaller;
  opacity: 0.5;
  text-align: right;
}
#messages > .chara-Narrator {
  background-color: #fff;
  box-shadow: 0 1px 1px #bbb;
  padding: 5px;
}
#messages > .chara-Narrator > .name {
  display: none;
}
#messages > .chara-Narrator > .content {
  border: dotted 1px #bbb;
  padding: 5px;
  text-align: center;
  font-style: italic;
}
#messages > .chara-Narrator > .content::first-letter {
  font-size: 125%;
  font-style: normal;
} 
#messages > .chara-Narrator > .timestamp {
  margin: -5px 28px -2px;
}
#messages > .message:not(.chara-Narrator) {
  margin: 10px;
  margin-top: 22px;
  padding: 6px 8px 10px;
  border-radius: 16px;
  border-bottom-left-radius: 0;
  box-shadow: 0 2px 3px #555;
  position: relative;
  max-width: 100%;
}
#messages > .message:not(.chara-Narrator) > .name{
  display: inline-block;
  position: absolute;
  left: 25px;
  top: -13px;
  background-color: inherit;
  border-radius: 4px;
  padding: 3px 10px;
  font-size: 12px;
  letter-spacing: 1px;
  word-spacing: 1px;
  z-index: 100;
  box-shadow: 0 1px 2px #555;
}
#messages > .message:not(.chara-Narrator) > .content {
  background-color: white;
  color: black;
  opacity: 0.9;
  padding: 5px;
  border-radius: 12px;
  border-bottom-left-radius: 0;
  box-shadow: 0 1px 2px #888 inset;
}
#messages > .message:not(.chara-Narrator) > .timestamp {
  margin: -5px 15px -2px;
}
#messages > .info {
  text-align: center;
}
#messages > .info ol {
  display: inline-block;
  text-align: left;
}

#character-menu {
  position: fixed;
  bottom: 0;
  left: 5px;
  right: 5px;
  margin: auto;
  max-width: 700px;
  z-index: 300;
  background: inherit;
  border: dotted 1px #555;
  margin: 20px auto 0;
  padding: 15px 10px;
}
#character-menu h3 {
  margin: 0 auto;
}
#characters {
  display: block;
  margin: 0 auto 20px;
  max-width: 600px;
}
#characters > .character {
  display: inline-block;
  width: 135px;
}
#characters .chara-Narrator {
  color: #555;
}
#characters > .character a {
  display: block;
  text-align: center;
  font-weight: bold;
  margin: 5px;
  text-decoration: none;
  box-shadow: 0 1px 2px #888;
}
#characters > .character a:hover {
  opacity: 0.5;
}

#new-character {
  border: dotted 1px #3c3c3c;
  z-index: 600;
  background-color: inherit;
  position: fixed;
  top: 25px;
  left: 5px;
  right: 5px;
  margin: auto;
  max-width: 350px;
  padding: 0 25px;
}
#new-character input[type=submit] {
  margin: 20px;
  padding: 10px 20px;
}

.input-name, .input-container {
  padding: 3px;
}
.input-name {
  font-weight: bold;
}
.input-name::after {
  content: ":";
}
.input-container input {
  width: 100%;
}
@media all and (max-width: 425px) {
  .input-name {
    text-align: left;
    padding-left: 20px;
  }
}
@media not all and (max-width: 425px) {
  .input-section {
    display: table-row;
  }
  .input-name, .input-container {
    display: table-cell;
  }
  .input-name {
    padding-top: 6px;
    padding-right: 10px;
    vertical-align: top;
    text-align: right;
  }
  .input-container {
    width: 100%;
  }
}
input,
textarea {
  font-family:serif;
}
input[type=text],
textarea {
  background-color: white;
  border: solid 1px #555;
  box-shadow: 0 1px 1px #555 inset;
  padding: 3px;
  margin: -3px;
  font-size: 16px;
  vertical-align: middle;
}
input[type=submit] {
  font-size:18px;
  background-color: #fff;
  color: #222;
  border:solid 1px #3c3c3c;
  font-weight:bold;
  box-shadow: 0 1px 2px #888;
}
input[type=submit]:hover {
  cursor:pointer;
  background-color:#3c3c3c;
  box-shadow: 0 1px 10px #555;
  color:#fafafa;
}
#message-box {
  position: fixed;
  z-index: 200;
  bottom: 0;
  left: 5px;
  right: 5px;
  margin: auto;
  max-width: 700px;
  background: inherit;
  border: dotted 1px #555;
  border-bottom: none;
  border-spacing: 10px;
}
#message-bar {
  display: table-row;
}
#message-bar #message-text,
#message-bar #message-button {
  display: table-cell;
  vertical-align: middle;
  padding: 0;
  margin: 0;
}
#message-box #message-text {
  width: 100%;
}
#message-text textarea {
  width: 100%;
  resize: vertical;
  min-height: 60px;
}
#message-box input[type=submit] {
  min-width: 80px;
  height: 68px;
}

.pages {
  margin: 20px;
}

ul#stats {
  display: inline-block;
  border: dotted 1px #555;
  margin: 0;
  padding: 20px;
  padding-left: 40px;
}
#stats li {
  text-align: left;
}

